--- a/my activity.html
+++ b/my activity.html
@@ -24,8 +24,8 @@
 <body>
 <nav>
   <div class="wrap">
-    <a class="back" href="Depan.html">← Back to portfolio</a>
-    <a href="Depan.html"></a>
+    <a class="back" href="index.html">← Back to portfolio</a>
+    <a href="index.html"></a>
 </div>
 </nav>
     <div class="hero">
