--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="nav-toggle" id="navToggle">☰</div>
   <nav id="navMenu">
     <a href="#home">Home</a>
-    <a href="#projects">Projects</a>
+    <a href="#projects">About me</a>
+     <a href="projects.html">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
